--- a/app/src/main/res/layout/form_update_dokter.xml
+++ b/app/src/main/res/layout/form_update_dokter.xml
@@ -62,7 +62,7 @@
                     android:textColor="#828282"
                     android:textSize="14sp"
                     android:layout_height="50dp"
-                    android:layout_width="50dp"
+                    android:layout_width="match_parent"
                     android:hint="nama"
                     />
             </LinearLayout>
@@ -82,7 +82,7 @@
                     android:textColor="#828282"
                     android:textSize="14sp"
                     android:layout_height="50dp"
-                    android:layout_width="50dp"
+                    android:layout_width="match_parent"
                     android:hint="umur"
                     />
             </LinearLayout>
@@ -102,7 +102,7 @@
                     android:textColor="#828282"
                     android:textSize="14sp"
                     android:layout_height="50dp"
-                    android:layout_width="50dp"
+                    android:layout_width="match_parent"
                     android:hint="alamat"
                     />
             </LinearLayout>
