--- a/app/src/main/res/layout/form_update_jadwal.xml
+++ b/app/src/main/res/layout/form_update_jadwal.xml
@@ -40,7 +40,7 @@
                     android:id="@+id/r2zkwtug8tuf"
                     android:layout_width="186dp"
                     android:layout_height="wrap_content"
-                    android:text="Add Jadwal Dokter"
+                    android:text="Edit Jadwal Dokter"
                     android:textAlignment="center"
                     android:textColor="#000000"
                     android:textSize="17sp"
@@ -175,7 +175,7 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/btnsimpan"
+                android:id="@+id/updatejadwal"
                 android:layout_width="150dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
