--- a/app/src/main/res/layout/list_jadwal.xml
+++ b/app/src/main/res/layout/list_jadwal.xml
@@ -16,35 +16,35 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/listtanggal"
-            android:layout_width="120dp"
-            android:layout_height="30dp"
+            android:id="@+id/listdokter"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:layout_marginTop="10dp"
-            android:text="Tanggal"
-            android:textStyle="bold"
+            android:text="Dokter"
             android:textColor="@color/blue"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/listwaktumulai"
-            android:layout_width="wrap_content"
+            android:id="@+id/listhari"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/listtanggal"
+            android:layout_below="@id/listdokter"
             android:layout_marginStart="30dp"
             android:layout_marginBottom="5dp"
-            android:text="Waktu Mulai"
+            android:text="Hari"
             android:textColor="@color/blue"
             android:textSize="14sp" />
 
         <TextView
-            android:id="@+id/listwaktuberakhir"
-            android:layout_width="wrap_content"
+            android:id="@+id/listwaktu"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/listwaktumulai"
+            android:layout_below="@id/listhari"
             android:layout_marginStart="30dp"
             android:layout_marginBottom="5dp"
-            android:text="Waktu Berakhir"
+            android:text="Waktu Mulai"
             android:textColor="@color/blue"
             android:textSize="14sp" />
 
@@ -52,10 +52,9 @@
             android:id="@+id/updateButton"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="90dp"
-            android:layout_marginTop="3dp"
-            android:layout_toEndOf="@id/listtanggal"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"
+            android:layout_toEndOf="@id/listhari"
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:contentDescription="Update"
             android:padding="8dp"
@@ -65,10 +64,8 @@
             android:id="@+id/deleteButton"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="139dp"
-            android:layout_marginTop="3dp"
-            android:layout_toEndOf="@id/listtanggal"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@id/updateButton"
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:contentDescription="Delete"
             android:padding="8dp"
@@ -78,9 +75,7 @@
             android:id="@+id/detailButton"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="3dp"
+            android:layout_centerVertical="true"
             android:layout_toEndOf="@id/deleteButton"
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:contentDescription="Detail"
