--- a/app/src/main/res/layout/dashboard_pasien.xml
+++ b/app/src/main/res/layout/dashboard_pasien.xml
@@ -33,7 +33,7 @@
             android:id="@+id/imageViewProfil"
             android:layout_width="42dp"
             android:layout_height="35dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.956"
             app:layout_constraintStart_toStartOf="@+id/headerdashboard"
@@ -52,15 +52,15 @@
             app:srcCompat="@drawable/iconlove" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/textViewNamaUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="16dp"
             android:text="Selamat datang, Aurelia Azzahra!"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/headerdashboard"
-            app:layout_constraintHorizontal_bias="0.323"
+            app:layout_constraintHorizontal_bias="0.318"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
