--- a/app/src/main/res/layout/form_add_rawat_jalan.xml
+++ b/app/src/main/res/layout/form_add_rawat_jalan.xml
@@ -72,6 +72,7 @@
                     android:layout_height="50dp"
                     android:layout_width="match_parent"
                     android:hint="nama"
+                    android:editable="false"
                     />
             </LinearLayout>
 
