--- a/app/src/main/res/layout/list_dokter.xml
+++ b/app/src/main/res/layout/list_dokter.xml
@@ -17,9 +17,9 @@
 
         <TextView
             android:id="@+id/listnamadokter"
-            android:layout_width="120dp"
+            android:layout_width="230dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
             android:text="Nama Dokter"
             android:textStyle="bold"
@@ -28,31 +28,32 @@
 
         <TextView
             android:id="@+id/listSpesialisDokter"
-            android:layout_width="wrap_content"
+            android:layout_width="230dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/listnamadokter"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="20dp"
             android:layout_marginBottom="5dp"
             android:text="Spesialis Dokter"
             android:textColor="@color/blue"
             android:textSize="14sp" />
+
         <TextView
             android:id="@+id/listKlnikDokter"
-            android:layout_width="wrap_content"
+            android:layout_width="230dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/listSpesialisDokter"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="20dp"
             android:layout_marginBottom="5dp"
             android:text="Klinik Dokter"
             android:textColor="@color/blue"
             android:textSize="14sp" />
+
         <ImageButton
             android:id="@+id/updateButton"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="131dp"
-            android:layout_marginTop="5dp"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="31dp"
             android:layout_toEndOf="@id/listnamadokter"
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:padding="8dp"
@@ -63,9 +64,8 @@
             android:id="@+id/deleteButton"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="174dp"
-            android:layout_marginTop="5dp"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="74dp"
             android:layout_toEndOf="@id/listnamadokter"
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:padding="8dp"
