--- a/app/src/main/res/layout/dashboard_pasien.xml
+++ b/app/src/main/res/layout/dashboard_pasien.xml
@@ -91,8 +91,8 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:id="@+id/textView5"
-                android:layout_width="199dp"
+                android:id="@+id/antrian"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="Menunggu"
@@ -113,8 +113,8 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:id="@+id/textView4"
-                android:layout_width="201dp"
+                android:id="@+id/nomorantrian"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="Nomor Antrian Anda"
