--- a/app/src/main/res/layout/view_riwayat_medis.xml
+++ b/app/src/main/res/layout/view_riwayat_medis.xml
@@ -21,7 +21,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:id="@+id/rj5eanhkdvv9"
+                android:id="@+id/iconback"
                 android:layout_width="24dp"
                 android:layout_height="25dp"
                 android:layout_marginEnd="80dp"
@@ -39,32 +39,6 @@
                 android:textSize="17sp" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/riwayatmedis"
-            android:layout_width="186dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="88dp"
-            android:text="Riwayat Medis"
-            android:textAlignment="center"
-            android:textColor="#000000"
-            android:textSize="17sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.071"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <View
-            android:id="@+id/line"
-            android:layout_width="0dp"
-            android:layout_height="2dp"
-            android:layout_marginTop="8dp"
-            android:background="@color/grey"
-            app:layout_constraintTop_toBottomOf="@id/riwayatmedis"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5" />
-
         <ListView
             android:id="@+id/listview"
             android:layout_width="0dp"
@@ -75,7 +49,7 @@
             android:divider="@android:color/transparent"
             android:dividerHeight="23.0sp"
             android:scrollbars="vertical"
-            app:layout_constraintTop_toBottomOf="@id/line"
+            app:layout_constraintTop_toBottomOf="@id/rhmwp9qlhnr4"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
